change in index button  viva Chavez

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,25 +7,7 @@
     color: darkred;
 }
 
-nav {
-    background: linear-gradient(#FCF3CF , #F6CEE3 );
-}
-
-#change:hover {
-    background-color:#F5A9BC;
-}
-#button:hover {
-    background-color: darkslategray;
-    color: blanchedalmond;
-    border-radius: 4px;
-    border: 2px solid #F6CEE3;
-}
-#dropdown {
-    background: linear-gradient(#FCF3CF , #F6CEE3 );
-}
-
 /*Estilos del footer*/
-
 .footer {
     background: #333;
 	color: #fff;
@@ -40,7 +22,7 @@ nav {
     font-size: 30px;
     padding: 10px;
     background: white;
-    border-radius: 50%;
+    border-radius: 50%; 
     width: 50px;
     height: 50px;
     line-height: 40px;
@@ -52,3 +34,52 @@ nav {
     background-image: url("../img/finanzas.jpg");
     background-size: cover;
 }
+
+/*Estilos par el menu*/
+#navbar {
+    background-color: #f1f1f1;
+    padding: 20px 5px;
+    transition: 0.2s;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 99;
+  }
+  #navbar a {
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 1px;
+    text-decoration: none;
+    font-size: 18px; 
+    line-height: 15px;
+    border-radius: 4px;
+    margin-left:15%;
+  }
+  #navbarNav{
+      margin-left:10%;
+  }
+  
+  .bg {
+    margin-top:26px;
+    background: url('../img/empre.jpg') no-repeat center center;
+    position: fixed;
+    width: 100%;
+    height: 550px; /*same height as jumbotron */
+    top:0;
+    left:0;
+    z-index: -1;
+  }
+  .jumbotron1 {
+    height: 400px;
+    color: white;
+    text-shadow: #444 0 1px 1px;
+    background:transparent;
+  }
+  /*modo responsive para celular */
+  @media screen and (max-width: 800px){
+    /*desaparesco el logo poque ocupa mucho espacio*/
+    #logoindex{
+        display:none;
+    }
+ }
