--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,11 @@
 /*------------------*/
+
+
 /*Estilos Master*/
+
+
 /*Estilos del header*/
+
 h1 {
     text-align: center;
     text-decoration: none;
@@ -12,13 +17,15 @@ h1 {
     color: darkred;
 }
 
+
 /*Estilos del footer*/
+
 .footer {
     margin-top: -50px;
     background: #333;
-	color: #fff;
-	padding: 10px;
-	text-align: center;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
 }
 
 .footer .social [class^="icon-"] {
@@ -28,21 +35,26 @@ h1 {
     font-size: 30px;
     padding: 10px;
     background: white;
-    border-radius: 50%; 
+    border-radius: 50%;
     width: 50px;
     height: 50px;
     line-height: 40px;
     margin: 0 10px;
 }
+
+
 /*Estilos del cuerpo de la pagina principal index...    background-image: url("../img/jumbo.jpg");
     background-size: cover;*/
 
 #jumbotrom {
     text-decoration-color: #0000;
     margin-top: 100px;
+    background: linear-gradient(to bottom, #FFFDFD, #D5D5D5);
 }
 
+
 /*Estilos par el menu*/
+
 #navbar {
     background-color: #f1f1f1;
     padding: 20px 5px;
@@ -51,47 +63,65 @@ h1 {
     width: 100%;
     top: 0;
     z-index: 99;
-  }
-  #navbar a {
+}
+
+#navbar a {
     float: left;
     color: black;
     text-align: center;
     padding: 1px;
     text-decoration: none;
-    font-size: 18px; 
+    font-size: 18px;
     line-height: 15px;
     border-radius: 4px;
-    margin-left:15%;
-  }
-  #navbarNav{
-      margin-left:10%;
-  }
-  
-  .bg {
-    margin-top:26px;
+    margin-left: 15%;
+}
+
+#navbarNav {
+    margin-left: 10%;
+}
+
+.bg {
+    margin-top: 26px;
     background: url('../img/empre.jpg') no-repeat center center;
     position: fixed;
     width: 100%;
-    height: 550px; /*same height as jumbotron */
-    top:0;
-    left:0;
+    height: 550px;
+    /*same height as jumbotron */
+    top: 0;
+    left: 0;
     z-index: -1;
-  }
-  .jumbotron1 {
+}
+
+.jumbotron1 {
     height: 400px;
     color: white;
     text-shadow: #444 0 1px 1px;
-    background:transparent;
-  }
-  /*modo responsive para celular */
-  @media screen and (max-width: 800px){
-    /*desaparesco el logo poque ocupa mucho espacio*/
-    #logoindex{
-        display:none;
-    }
- }
+    background: transparent;
+}
 
- /*ESTILOS DE SERVICIOS*/
+
+/*modo responsive para celular */
+
+@media screen and (max-width: 800px) {
+    /*desaparesco el logo poque ocupa mucho espacio*/
+    #logoindex {
+        display: none;
+    }
+}
+
+
+/*ESTILOS DE SERVICIOS y la pagina independiente de servicios ;)*/
+
 #services {
     margin-top: -100px;
+    background: linear-gradient(to bottom, #FFFDFD, #D5D5D5);
+}
+
+#downservice {
+    margin-top: 400px;
+}
+
+#card {
+    margin-top: -220px;
 }
