--- a/css/estilos.css
+++ b/css/estilos.css
@@ -123,5 +123,51 @@ h1 {
 }
 
 #card {
-    margin-top: -220px;
+    margin-top: -300px;
+}
+
+#card1 {
+    margin-top: 20px;
+}
+
+.footerservice {
+    margin-top: 100px;
+    background: #333;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+}
+
+.footerservice .social [class^="icon-"] {
+    display: inline-block;
+    color: #333;
+    text-decoration: none;
+    font-size: 30px;
+    padding: 10px;
+    background: white;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    line-height: 40px;
+    margin: 0 10px;
+}
+
+#jumboservice {
+    margin-top: 100px;
+    background-image: url("../img/sercices.jpg");
+    background-size: cover;
+}
+
+.bodyservice {
+    background: linear-gradient(to bottom, #FFFDFD, #D5D5D5);
+}
+
+#borderservice {
+    border: white double;
+    color: white;
+}
+
+#borderservice:hover {
+    background-color: #FFFDFD;
+    color: #333;
 }
