--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,9 +1,3 @@
-/*------------------*/
-
-
-/*Estilos Master*/
-
-
 /*Estilos del header*/
 
 h1 {
@@ -130,6 +124,34 @@ h1 {
     margin-top: 20px;
 }
 
+.column div {
+    position: relative;
+    float: left;
+    height: 150px;
+    margin: 0 0 0 25px;
+    padding: 0;
+}
+
+.card figure img {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+}
+
+.card figure:hover img {
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
+}
+
+figure {
+    height: 150px;
+    margin: 0;
+    padding: 0;
+    background: #fff;
+    overflow: hidden;
+}
+
 .footerservice {
     margin-top: 100px;
     background: #333;
@@ -174,8 +196,33 @@ h1 {
 }
 
 
-/* Estilos de acercader ;) */
+/* Estilos de acercade ;) */
 
 #arcade {
     margin-top: 200px;
 }
+
+
+/*Estilos de Contactanos*/
+
+.bodycontac {
+    background-color: #7C8ACB;
+}
+
+.img {
+    margin-top: 30px;
+}
+
+#jumbocontact {
+    margin-top: 100px;
+    background-image: url("../img/contac.png");
+    background-size: cover;
+}
+
+.contacto {
+    font-size: 40px;
+    color: #FFFDFD;
+}
+
+
+/* -------------------- */
